Minimal Directions